add restart screen page

--- a/index.html
+++ b/index.html
@@ -4,81 +4,85 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modern Space Invaders | Isadora Barros</title>
-<style>
-    body, html {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin: 0;
-        height: 1000;
-        font-family:Georgia, 'Times New Roman', Times, serif;
-        font-size: 14px;
-        background-color:rgb(238, 170, 238);
-    }
-</style>    
+    <style>
+        body, html {
+         display: flex;
+         justify-content:center;
+         align-items: center;
+         margin: 0; 
+         height: 100%;
+         font-family: Arial, Helvetica, sans-serif; 
+         font-size: 14px;
+         background-color: darkorchid; 
+        }
+    </style>
 </head>
 <body>
-    <div style= "position: relative"; id="parentDiv">
+    <div style="position: relative;" id="parentDiv">
         <p 
             id="scoreContainer"
             style="
-                position: absolute;
-                z-index: 10;
-                color: white;
-                left: 10px;
-                top: 10px;
-                margin: 0;
-                display: flex;
-
+             display: flex;
+             justify-content: center;
+             align-items: center;    
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            width: 100%;
             "
-        >
-            <span>Pontos>:</span>
+        > 
+            <span>Pontos:</span>
             <span id="scoreEl">0</span>
         </p>
-        <canvas></canvas>
-        <div
-         id="startScreen"
-        style="
-        
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            position: absolut;
-            top: 0;
-            left: 0;
-            right: 0;
-            botton: 0;
-            background: url('imagem/startScreenBackground.png');     
-            background-size: contain;
-            background-repeat: no-repeat;
+        <canvas></canvas> 
+            <div 
+                id="startScreen"
+                style="
+                    display: nome;
+                    justify-content: center;
+                    align-items: center;
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    background: url('./img/startScreenBackground.png');
+                    background-size: contain; 
+                    background-repeat: no-repeat;
+                    z-index: 20;
 
-
+                "
+            >
+            <div style="text-align: center;">
+        <h1 style="color: white;">Space Invaders</h1>
+        <div 
+            id="startButton"
+            style="
+                cursor: pointer;
+                position: relative;
+                display: inline-block;
             "
         >
-            <div style="text-align: center;">
-                <h1 style="color: white;">Space Invaders</h1>
-                <div
-                    id="startButton"
-                    style="
-                        cursor: pointer;
-                        position: relative;
-                        display: inline-block;  
-                    "
-                 >
-
-                 <img src="./imagem/button.png" alt="Start Button">
-                    <span
-                        style="
-                            position: absolute;
-                            color: white;
-                            top:  50px;
-                            left: 50px;
-                            transform: translate(-50%, -50%);
-                        "
-                    >Iniciar</span>
-                </div><!-- FIm do id startButton-->
-            </div>
-        </div><!-- Fim do id startScreen -->
-    </div><!-- Fim do id parentDiv -->
+        <img src="./img/button.png" alt="Start Button">
+        <span
+            style="
+                position: absolute;
+                color: white;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+            "
+        >Iniciar</span>
+          </div> <!-- Fim do id starButton -->
+         </div>
+        </div> <!-- Fim do id startScreen -->
+        <div id="restartScreen">
+            <div>
+                
+                <h1>Game Over</h1>
+                <div id= "restartButton" 
+                img src= "imagem/button.png" alt="restart Button" />
+                    <span>Reiniciar</span>
+         </div>
+            </div> <!-- Fim do id restartScreen-->
+       </div> <!-- Fim do id parentDiv -->
 </body>
-</html> 
+</html>
