--- a/index.html
+++ b/index.html
@@ -38,17 +38,18 @@
             <div 
                 id="startScreen"
                 style="
-                    display: nome;
+                    display:flex;
                     justify-content: center;
                     align-items: center;
                     position: absolute;
                     top: 0;
                     left: 0;
+                    right: 0;
+                    botton: 0;
                     background: url('./img/startScreenBackground.png');
                     background-size: contain; 
                     background-repeat: no-repeat;
                     z-index: 20;
-
                 "
             >
             <div style="text-align: center;">
@@ -74,13 +75,42 @@
           </div> <!-- Fim do id starButton -->
          </div>
         </div> <!-- Fim do id startScreen -->
-        <div id="restartScreen">
-            <div>
-                
-                <h1>Game Over</h1>
-                <div id= "restartButton" 
+          <div id="restartScreen">
+            style="
+            display:flex;
+            justify-content: center;
+            align-items: center;
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            botton: 0;
+            background: url('./img/startScreenBackground.png');
+            background-size: contain; 
+            background-repeat: no-repeat;
+            z-index: 20;
+
+            "
+            <di
+            v>
+               
+            <div style=" text-align: center;">
+                <h1v style=" color: aliceblue;" >Game Over</h1>
+                <div 
+                    id= "restartButton" 
+                    style="cursor: pointer;
+                    position="relative;
+                    display: "inline-block;"
                 img src= "imagem/button.png" alt="restart Button" />
-                    <span>Reiniciar</span>
+                    <span
+                    style="
+                        position: absolute;
+                        color: white;
+                        top: 50%;
+                        left: 50%;  
+                        transform: translate(-50%, -50%);
+
+                        >Reiniciar</span>
          </div>
             </div> <!-- Fim do id restartScreen-->
        </div> <!-- Fim do id parentDiv -->
