--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         <p 
             id="scoreContainer"
             style="
-             display: flex;
-             justify-content: center;
-             align-items: center;    
-            position: absolute;
-            top: 10px;
-            left: 10px;
-            width: 100%;
+                display: flex;    
+                position: absolute;
+                top: 10px;
+                left: 10px;
+                z-index: 10;
+                color: white;
+                margin: 0;
             "
         > 
             <span>Pontos:</span>
@@ -101,7 +101,7 @@
                     style="cursor: pointer;
                     position="relative;
                     display: "inline-block;"
-                img src= "imagem/button.png" alt="restart Button" />
+                img src= "imagem/button.png" alt="restart Button" >
                     <span
                     style="
                         position: absolute;
