--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
                 <h1v style=" color: aliceblue;" >Game Over</h1>
                 <div 
                     id= "restartButton" 
-                    style="cursor: pointer;
-                    position="relative;
-                    display: "inline-block;"
+                    style="cursor: pointer";
+                    position="relative";
+                    display= "inline-block";
                 img src= "imagem/button.png" alt="restart Button" >
                     <span
                     style="
